# Snowflake

./: .gitmodules  README.md  install_dependencies.sh
src/drag_race/: CMakeLists.txt
src/drag_race/include/: DragRaceNode.h  LidarObstacle.h  LidarObstacleManager.h
src/drag_race/launch/: drag_race.launch
src/drag_race/src/: DragRaceController.cpp  DragRaceNode.cpp  LidarObstacle.cpp  LidarObstacleManager.cpp
src/drag_race/test/: drag-race-controller-test.cpp  lidar-obstacle-manager-test.cpp
src/map/: CMakeLists.txt
src/map/launch/: image_to_pointcloud.launch
src/mapping_igvc/: CMakeLists.txt  package.xml
src/mapping_igvc/include/: ObstacleManager.h  ObstacleManager.tpp
src/mapping_igvc/src/: ObstacleManager.cpp
src/mapping_igvc/test/: obstacle-manager-test.cpp
src/mapping_urc/: CMakeLists.txt  package.xml
src/mapping_urc/include/: Mapper.h  MapperNode.h  WorldMap.h
src/mapping_urc/src/: Mapper.cpp  MapperNode.cpp  WorldMap.cpp  mapper_node.cpp
src/mapping_urc/test/: WorldMap-test.cpp
src/pathfinding/: CMakeLists.txt  package.xml
src/pathfinding/include/: Pathfinding.h
src/pathfinding/src/: Pathfinding.cpp  pathfinding.cpp
src/sb_gazebo/: CMakeLists.txt  README.md  package.xml
src/sb_gazebo/launch/: elsa_control.launch  igvc_qualification.launch  jfrost_control.launch  keyboard_teleop.launch  ps3_teleop.launch  xbox360_teleop.launch
src/sb_gazebo/robots/models/jfrost/: jfrost.xacro
src/sb_gazebo/scripts/: gazebo_launcher.py
src/sb_gazebo/src/: zed_transform.cpp
src/sb_gazebo/urdf/: jfrost.gazebo  jfrost.xacro
src/sb_geom/: CMakeLists.txt  package.xml
src/sb_geom/include/sb_geom/: Line.h  PolyLine.h  Polygon2D.h  SplineLine.h  spline.h
src/sb_geom/src/: PolyLine.cpp  Polygon2D.cpp  SplineLine.cpp
src/sb_geom/test/: Point2D-test.cpp  Polygon2D-test.cpp  polyline-test.cpp
src/zed_filter/: CMakeLists.txt  package.xml
src/zed_filter/cfg/: ZedHSVFilter.cfg
src/zed_filter/include/: .ZedFilter.h.swp  ZedFilter.h
src/zed_filter/src/: .ZedFilter.cpp.swp  ZedFilter.cpp  zed_filter.cpp
